--- a/assets/main.css
+++ b/assets/main.css
@@ -2890,8 +2890,6 @@ input[type="button"] {
 
 .button:visited {
   color: #fff; }
-  .button:visited .button.button-primary:visited {
-    color: #fff; }
 
 /* Fix for odd Mozilla border & padding issues */
 button::-moz-focus-inner,
@@ -2963,47 +2961,16 @@ input[type="text"],
 input[type="tel"],
 input[type="url"],
 input[type="password"],
-select,
-textarea {
-  width: 100%;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-  outline: none;
-  font-family: "Roboto", sans-serif;
-  border-radius: 4px;
-  border: 1px solid #ccc;
-  margin: 8px 0; }
-  input[type="email"]:focus,
-  input[type="number"]:focus,
-  input[type="search"]:focus,
-  input[type="text"]:focus,
-  input[type="tel"]:focus,
-  input[type="url"]:focus,
-  input[type="password"]:focus,
-  select:focus,
-  textarea:focus {
-    border: 1px solid #fff;
-    border-radius: 4px; }
-
-input[type="email"],
-input[type="number"],
-input[type="search"],
-input[type="text"],
-input[type="tel"],
-input[type="url"],
-input[type="password"],
-select {
-  padding: 12px 20px;
-  display: inline-block;
-  box-sizing: border-box; }
-
 textarea,
-textarea[type=text] {
-  font-family: "Roboto", sans-serif;
-  height: 100px;
-  padding: 14px 20px;
-  box-sizing: border-box;
-  resize: none; }
+select {
+  height: 38px;
+  padding: 6px 10px;
+  /* The 6px vertically centers text on FF, ignored by Webkit */
+  background-color: #fff;
+  border: 1px solid #D1D1D1;
+  border-radius: 4px;
+  box-shadow: none;
+  box-sizing: border-box; }
 
 /* Removes awkward default styles on some inputs for iOS */
 input[type="email"],
@@ -3017,6 +2984,23 @@ textarea {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none; }
+
+textarea {
+  min-height: 65px;
+  padding-top: 6px;
+  padding-bottom: 6px; }
+
+input[type="email"]:focus,
+input[type="number"]:focus,
+input[type="search"]:focus,
+input[type="text"]:focus,
+input[type="tel"]:focus,
+input[type="url"]:focus,
+input[type="password"]:focus,
+textarea:focus,
+select:focus {
+  border: 1px solid #33C3F0;
+  outline: 0; }
 
 label,
 legend {
