--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,6 +28,10 @@
     </div>
 
     <div class="row">
+      <h1>Experience</h1>
+    </div>
+
+    <div class="row">
         <h3>Gravity</h3>
     </div>
 
