--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Edward Compton</title>
-    <link type="text/css" rel="stylesheet" href="./assets/main.css">
+    {% stylesheet main %} 
 </head>
 
 <body>
