--- a/_assets/css/main.scss
+++ b/_assets/css/main.scss
@@ -17,8 +17,6 @@ $muted-color: #828a95;
 }
 
 .canvas_wrapper {
-  width: 100%;
-  overflow: hidden;
   position: absolute;
 }
 
@@ -54,4 +52,30 @@ $muted-color: #828a95;
   background-size: cover;
   width: 100vw;
   position: relative;
+}
+
+.svg_icon>svg {
+  width: 50%;
+  max-height: 80px;
+  margin: 0 auto;
+}
+
+.parallax {
+  perspective: 1px;
+  height: 100vh;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+.parallax__layer {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+.parallax__layer--base {
+  transform: translateZ(0);
+}
+.parallax__layer--back {
+  transform: translateZ(-1px) scale(2);
 }
