--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,83 +2,149 @@
 <html>
 
 <head>
-    <title>Edward Compton</title>
-    {% stylesheet main %} 
+  <title>Edward Compton</title>
+  <link rel="shortcut icon" href="assets/favicon.png"> {% stylesheet main %}
 </head>
 
 <body>
 
-<body>
-<div class="canvas_wrapper">
-    <canvas class="canvas" height="900px" width="1920px"></canvas>
-</div>
-<div class="container">
-    <div class="hero">
+  <body>
+    <div class="parallax">
+    <div class="parallax__layer--back canvas_wrapper">
+      <canvas class="canvas" height="900px" width="1920px"></canvas>
+    </div>
+    <div class="parallax__layer--base container">
+      <div class="hero">
         <h1 class="hero_title">Edward Compton</h1>
         <p>Hello, I'm a developer</p>
         <p>
-            <a href="files/cv-edward_compton.pdf" target="_blank" class="button button-primary">cv</a>
+          <a href="files/cv-edward_compton.pdf" target="_blank" class="button button-primary">cv</a>
         </p>
 
         <div class="hero_icons">
-            <a href="https://github.com/e-compton/" target="_blank"><i class="fa fa-github"></i></a> &nbsp;
-            <a href="https://www.linkedin.com/in/edward-compton-a92370109/" target="_blank"><i
+          <a href="https://github.com/e-compton/" target="_blank"><i class="fa fa-github"></i></a> &nbsp;
+          <a href="https://www.linkedin.com/in/edward-compton-a92370109/" target="_blank"><i
                     class="fa fa-linkedin"></i></a>
         </div>
-    </div>
+      </div>
 
-    <div class="row">
-      <h1>Experience</h1>
-    </div>
+      <div class="row">
+        <p>Some of the technologies I've worked with:</p>
+      </div>
 
-    <div class="row">
+      <div class="row center">
+        <div class="two columns">
+          <div class="row svg_icon">{% include svg_icons/java.html %}</div>
+          <div class="row">Java</div>
+        </div>
+
+        <div class="two columns">
+          <div class="row svg_icon">{% include svg_icons/c.html %}</div>
+          <div class="row">C</div>
+        </div>
+
+        <div class="two columns">
+          <div class="row svg_icon">{% include svg_icons/python.html %}</div>
+          <div class="row">Python</div>
+        </div>
+
+        <div class="two columns">
+          <div class="row svg_icon">{% include svg_icons/javascript.html %}</div>
+          <div class="row">Javascript</div>
+        </div>
+
+        <div class="two columns">
+          <div class="row svg_icon">{% include svg_icons/git.html %}</div>
+          <div class="row">git</div>
+        </div>
+
+        <div class="two columns">
+          <div class="row svg_icon">{% include svg_icons/bash.html %}</div>
+          <div class="row">Bash</div>
+        </div>
+      </div>
+
+      <div class="row center">
+        <div class="two columns">
+          <div class="row svg_icon">{% include svg_icons/html5.html %}</div>
+          <div class="row">HTML</div>
+        </div>
+
+        <div class="two columns">
+          <div class="row svg_icon">{% include svg_icons/css3.html %}</div>
+          <div class="row">CSS</div>
+        </div>
+
+        <div class="two columns">
+          <div class="row svg_icon">{% include svg_icons/sass.html %}</div>
+          <div class="row">Sass</div>
+        </div>
+
+        <div class="two columns">
+          <div class="row svg_icon">{% include svg_icons/nodejs.html %}</div>
+          <div class="row">Node.js</div>
+        </div>
+
+        <div class="two columns">
+          <div class="row svg_icon">{% include svg_icons/opengl.html %}</div>
+          <div class="row">OpenGL</div>
+        </div>
+
+        <div class="two columns">
+          <div class="row svg_icon">{% include svg_icons/apache.html %}</div>
+          <div class="row">Apache</div>
+        </div>
+      </div>
+
+      <div class="row">
         <h3>Gravity</h3>
-    </div>
+      </div>
 
-    <div class="row">
+      <div class="row">
         <div class="nine columns">
-            <p>A gravity simulation sandbox written in java using LibGDX.</p>
-            <ul>
-                <li>Velocity Verlet numerical method implementation</li>
-                <li>Live editing of velocity, masses and radii</li>
-            </ul>
+          <p>A gravity simulation sandbox written in java using LibGDX.</p>
+          <ul>
+            <li>Velocity Verlet numerical method implementation</li>
+            <li>Live editing of velocity, masses and radii</li>
+          </ul>
         </div>
 
         <div class="three columns center">
-            <a href="files/gravityLab.exe" download class="button">download</a>
+          <a href="files/gravityLab.exe" download class="button">download</a>
         </div>
-    </div>
-    <hr>
-    <div class="row">
+      </div>
+      <hr>
+      <div class="row">
         <h3>Trampedia</h3>
-    </div>
-    <div class="row">
+      </div>
+      <div class="row">
         <div class="nine columns">
-            <p>An encyclopedia of trampoline moves for coaches and judges of trampoline gymnastics</p>
+          <p>An encyclopedia of trampoline moves for coaches and judges of trampoline gymnastics</p>
         </div>
         <div class="three columns center">
-            <a href="http://trampedia.siteleaf.net/" target="_blank" class="button">visit</a>
+          <a href="http://trampedia.siteleaf.net/" target="_blank" class="button">visit</a>
         </div>
-    </div>
-    <hr>
-    <div class="row">
+      </div>
+      <hr>
+      <div class="row">
         <h3>Trampoline.club</h3>
-    </div>
+      </div>
 
-    <div class="row">
+      <div class="row">
         <div class="nine columns">
-            <p>The University of Warwick Trampoline club website.</p>
+          <p>The University of Warwick Trampoline club website.</p>
         </div>
         <div class="three columns center">
-            <a href="http://warwicktrampoline.club/" target="_blank" class="button">visit</a>
+          <a href="http://warwicktrampoline.club/" target="_blank" class="button">visit</a>
         </div>
-    </div>
+      </div>
 
-    <div class="row center">
+      <div class="row center">
         <br>
         <p>&copy; Edward Compton {{ "now" | date: "%Y" }}</p>
+      </div>
     </div>
-
+  </div>
     <script>
       var c = document.querySelector('.canvas');
       var ctx = c.getContext('2d');
@@ -93,12 +159,13 @@
 
       function random(min, max) {
         return Math.floor(Math.random() * (max - min) + min);
-      }
+      } //EDWARD COMPTON CANNOT CODE
+
 
       function smallWeightedRandom(min, max) {
         return Math.floor(Math.abs(Math.random() - Math.random()) * (max - min) + min);
       }
     </script>
-</body>
+  </body>
 
 </html>
