--- a/assets/main.css
+++ b/assets/main.css
@@ -9,8 +9,8 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro");
 @font-face {
   font-family: 'FontAwesome';
-  src: url("/edwardcomptonnet/assets/font-awesome/fontawesome-webfont.eot?v=4.7.0");
-  src: url("/edwardcomptonnet/assets/font-awesome/fontawesome-webfont.eot?v=4.7.0#iefix") format("embedded-opentype"), url("/edwardcomptonnet/assets/font-awesome/fontawesome-webfont.woff2?v=4.7.0") format("woff2"), url("/edwardcomptonnet/assets/font-awesome/fontawesome-webfont.woff?v=4.7.0") format("woff"), url("/edwardcomptonnet/assets/font-awesome/fontawesome-webfont.ttf?v=4.7.0") format("truetype"), url("/edwardcomptonnet/assets/font-awesome/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular") format("svg");
+  src: url("/assets/font-awesome/fontawesome-webfont.eot?v=4.7.0");
+  src: url("/assets/font-awesome/fontawesome-webfont.eot?v=4.7.0#iefix") format("embedded-opentype"), url("/assets/font-awesome/fontawesome-webfont.woff2?v=4.7.0") format("woff2"), url("/assets/font-awesome/fontawesome-webfont.woff?v=4.7.0") format("woff"), url("/assets/font-awesome/fontawesome-webfont.ttf?v=4.7.0") format("truetype"), url("/assets/font-awesome/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular") format("svg");
   font-weight: normal;
   font-style: normal; }
 .fa {
@@ -3295,8 +3295,6 @@ body {
   background-color: #222; }
 
 .canvas_wrapper {
-  width: 100%;
-  overflow: hidden;
   position: absolute; }
 
 .hero {
@@ -3327,3 +3325,27 @@ body {
   background-size: cover;
   width: 100vw;
   position: relative; }
+
+.svg_icon > svg {
+  width: 50%;
+  max-height: 80px;
+  margin: 0 auto; }
+
+.parallax {
+  perspective: 1px;
+  height: 100vh;
+  overflow-x: hidden;
+  overflow-y: auto; }
+
+.parallax__layer {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0; }
+
+.parallax__layer--base {
+  transform: translateZ(0); }
+
+.parallax__layer--back {
+  transform: translateZ(-1px) scale(2); }
