--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,18 +9,7 @@
 <body>
   <div class="container">
 
-    <nav>
-      <a href="{{ site.url }}" class="nav_title">Edward Compton</a>
-      <div class="nav_icons">
-        <a href="https://github.com/e-compton/" target="_blank">
-          <i class="fa fa-github"></i>
-        </a>
-        &nbsp;
-        <a href="https://www.linkedin.com/in/edward-compton-a92370109/" target="_blank">
-          <i class="fa fa-linkedin"></i>
-        </a>
-      </div>
-    </nav>
+    {% include nav.html %}
 
     {{ content }}
   </div>
