--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,8 @@
 
 <head>
   <title>Edward Compton</title>
-  <link rel="shortcut icon" href="assets/favicon.png"> {% stylesheet main %}
+  <link rel="shortcut icon" href="assets/favicon.png">
+  {% stylesheet main %}
 </head>
 
 <body>
@@ -14,14 +15,8 @@
         <canvas class="canvas" height="900px" width="1920px"></canvas>
       </div>
       <div class="parallax__layer--base container">
-        <nav>
-          <div class="nav_icons">
-            <a href="https://github.com/e-compton/" target="_blank"><i class="fa fa-github"></i></a> &nbsp;
-            <a href="https://www.linkedin.com/in/edward-compton-a92370109/" target="_blank"><i
-                    class="fa fa-linkedin"></i></a>
-          </div>
-        </nav>
 
+        {% include nav.html %}
 
         <div class="hero">
           <h1 class="hero_title">Edward Compton</h1>
@@ -162,27 +157,8 @@
         </div>
       </div>
     </div>
-    <script>
-      var c = document.querySelector('.canvas');
-      var ctx = c.getContext('2d');
-      ctx.fillStyle = 'white';
-      for (var i = 0; i < 80; i++) {
-        let x = random(0, 1920);
-        let y = smallWeightedRandom(0, 900);
-        let fontSize = random(5, 15);
-        ctx.font = `${fontSize}px monospace`;
-        ctx.fillText(".", x, y);
-      }
 
-      function random(min, max) {
-        return Math.floor(Math.random() * (max - min) + min);
-      } //EDWARD COMPTON CANNOT CODE
-
-
-      function smallWeightedRandom(min, max) {
-        return Math.floor(Math.abs(Math.random() - Math.random()) * (max - min) + min);
-      }
-    </script>
+    <script>{% asset starsCanvas.js %}</script>
   </body>
 
 </html>
