--- a/_assets/css/main.scss
+++ b/_assets/css/main.scss
@@ -53,24 +53,34 @@ nav {
   position: relative;
   display: block;
   color: $light-color;
-    text-decoration: none;
+  text-decoration: none;
+  margin-right: 20px;
+
   &:hover, &:visited {
     text-decoration: none;
     color: $light-color;
   }
 }
 
-.nav_icons {
-  // position: absolute;
-  // top: 10px;
-  // right: 15px;
-  margin-left: auto;
-  font-size: relative(24px);
-  a, a:hover, a:visited {
-    text-decoration: none;
-    color: $light-color;
+.nav_link, .nav_link:visited {
+  text-decoration: none;
+  font-style: italic;
+  color: $light-color;
+  font-size: relative(16px);
+
+  &:hover, &:active {
+    color: $muted-color;
   }
 }
+
+.nav_icons {
+  margin-left: auto;
+
+  .nav_link {
+    font-size: relative(22px);
+  }
+}
+
 .center {
   text-align: center;
 }
