--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,12 +4,14 @@
     <a href="{{ site.url }}" class="nav_title">Edward Compton</a>
   {% endif %}
 
+  <a href="#" class="nav_link">blog</a>
+
   <div class="nav_icons">
-    <a href="https://github.com/e-compton/" target="_blank">
+    <a class="nav_link" href="https://github.com/e-compton/" target="_blank">
       <i class="fa fa-github"></i>
     </a>
     &nbsp;
-    <a href="https://www.linkedin.com/in/edward-compton-a92370109/" target="_blank">
+    <a class="nav_link" href="https://www.linkedin.com/in/edward-compton-a92370109/" target="_blank">
       <i class="fa fa-linkedin"></i>
     </a>
   </div>
