--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Edward Compton</title>
-  <link rel="shortcut icon" href="assets/favicon.png">
+  <link rel="shortcut icon" href="{% asset_path favicon %}">
   {% stylesheet main %}
 </head>
 
