--- a/assets/main.css
+++ b/assets/main.css
@@ -3289,10 +3289,10 @@ img.scale-with-grid {
   height: 0; }
 
 body {
-  background-color: #222; }
+  background-color: #1e1e1e; }
 
 code {
-  background-color: #222;
+  background-color: #1e1e1e;
   border-color: #828a95; }
 
 @media only screen and (max-width: 767px) and (min-width: 480px) {
@@ -3304,11 +3304,10 @@ img {
   max-width: 100%;
   max-height: 350px; }
 
-.canvas {
-  background-color: #222; }
-
 .canvas_wrapper {
-  position: absolute; }
+  position: absolute;
+  overflow: hidden;
+  width: 100%; }
 
 .hero {
   justify-content: center;
