--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,15 +4,15 @@
     <a href="{{ site.url }}" class="nav_title">Edward Compton</a>
   {% endif %}
 
-  <a href="#" class="nav_link">blog</a>
+  <a href="/blog" class="nav_link">blog</a>
 
   <div class="nav_icons">
     <a class="nav_link" href="https://github.com/e-compton/" target="_blank">
-      <i class="fa fa-github"></i>
+      {% include svg_icons/github.html %}
     </a>
     &nbsp;
     <a class="nav_link" href="https://www.linkedin.com/in/edward-compton-a92370109/" target="_blank">
-      <i class="fa fa-linkedin"></i>
+      {% include svg_icons/linkedin.html %}
     </a>
   </div>
 </nav>
