--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -13,12 +13,15 @@
     {% include nav.html %}
 
     {% for post in site.posts %}
-      {% if forloop.first == false %}
-      <hr>
-      {% endif %}
-      <h4><a href="{{ post.url }}">{{ post.title }}</a></h4>
-      <p><small><strong>{{ post.date | date: "%B %e, %Y" }}</strong> . {{ post.category }} . <a href="http://erjjones.github.com{{ post.url }}#disqus_thread"></a></small></p>
-
+    <div class="blogPost">
+      <h4 class="blogPost_title"><a href="{{ post.url }}">{{ post.title }}</a></h4>
+      <p class="blogPost_meta">{{ post.date | date: "%B %e, %Y" }} &middot; {{ post.category }}</p>
+      <p class="blogPost_excerpt">{{ post.excerpt | strip_html }}</p>
+    </div>
     {% endfor %}
+
+    <div class="row center">
+      <p>&copy; Edward Compton {{ "now" | date: "%Y" }}</p>
+    </div>
   </div>
 </body>
