--- a/assets/main.css
+++ b/assets/main.css
@@ -3301,7 +3301,7 @@ code {
 img {
   display: block;
   margin: 0 auto;
-  max-width: 100%;
+  width: auto;
   max-height: 350px; }
 
 .canvas_wrapper {
@@ -3325,7 +3325,8 @@ nav {
   display: flex;
   height: 60px;
   align-items: center;
-  font-size: 2rem; }
+  font-size: 2rem;
+  padding-bottom: 30px; }
 
 .nav_title {
   font-family: 'Pacifico', cursive;
@@ -3363,6 +3364,10 @@ nav {
   width: 100vw;
   position: relative; }
 
+a > svg {
+  height: 2.2rem;
+  width: auto; }
+
 svg {
   width: 50%;
   clear: both; }
@@ -3399,6 +3404,24 @@ svg {
 
 .applet_icons > div {
   flex: 1 0; }
+
+h2 a, h2 a:active, h2 a:hover, h2 a:visited, h3 a, h3 a:active, h3 a:hover, h3 a:visited, h4 a, h4 a:active, h4 a:hover, h4 a:visited, h5 a, h5 a:active, h5 a:hover, h5 a:visited, h6 a, h6 a:active, h6 a:hover, h6 a:visited {
+  color: inherit;
+  text-decoration: inherit; }
+
+.blogPost {
+  padding-bottom: 4rem; }
+
+.blogPost_title {
+  margin-bottom: 0;
+  display: inline-block; }
+
+.blogPost_excerpt {
+  margin-bottom: 0; }
+
+.blogPost_meta {
+  margin-bottom: 1rem;
+  color: #D1D4D8; }
 
 .highlight .hll {
   background-color: #404040; }
