--- a/_assets/css/skeleton/themes/main/_vars.scss
+++ b/_assets/css/skeleton/themes/main/_vars.scss
@@ -6,7 +6,7 @@ $form-font: 'Roboto', sans-serif;
 $font-color: $light-color;
 $heading-color: $light-color;
 
-
+$font-size: 17px;
 
 $button-primary-color: $light-color;
 $button-primary-background-color: $primary-color;
